SONAR-14935 add 'detectedCI' field